noinst_HEADERS = interface.hpp

AM_CPPFLAGS = -I$(top_srcdir)/libsrc/include -I$(top_srcdir)/libsrc/interface
METASOURCES = AUTO
noinst_LTLIBRARIES = libinterface.la
libinterface_la_SOURCES = readfnf.cpp readtet.cpp readuser.cpp writeabaqus.cpp writediffpack.cpp \
	writedolfin.cpp writeelmer.cpp writefeap.cpp writefluent.cpp writegmsh.cpp writejcm.cpp \
	writepermas.cpp writetecplot.cpp writetet.cpp writetochnog.cpp writeuser.cpp \
	writechemnitz.cpp writegmsh2.cpp writefepp.cpp writevrml.cpp writestl.cpp writevtu.cpp

